--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -47,7 +47,7 @@
     "## Topics\n",
     "\n",
     "* Introduction\n",
-    "* Software development pratices\n",
+    "* Software development practices\n",
     "* Errors and floating point computation"
    ]
   },
@@ -146,8 +146,8 @@
     "\n",
     "L Anderson and V. Piterbarg, 2010\n",
     "\n",
-    "* Interest rate modelling, volume I: Foundations and Vanilla Models \n",
-    "* Interest rate modelling, volume II: Vanilla Models\n",
+    "* Interest rate modeling, volume I: Foundations and Vanilla Models \n",
+    "* Interest rate modeling, volume II: Vanilla Models\n",
     "  \n",
     "P. Glasserman 2010\n",
     "  \n",
@@ -258,7 +258,7 @@
     "* Simplicity\n",
     "    - no obvious defects is not the same as obviously no defects\n",
     "* Other desirable features:\n",
-    "    - Scalability, robustness, Easy support and maintenanc etc."
+    "    - Scalability, robustness, Easy support and maintenance etc."
    ]
   },
   {
@@ -369,7 +369,7 @@
     "## Choose the right programming tools\n",
     "\n",
     "* Programming paradigm: procedural, OOP, functional\n",
-    "* Expressivity: fewer lines of code for the same functionaltiy\n",
+    "* Expressivity: fewer lines of code for the same functionality\n",
     "* Ecosystem: library, tools, community, industry support\n",
     "\n",
     "There is no single right answer\n",
@@ -809,7 +809,7 @@
    "source": [
     "## Range and precision\n",
     "\n",
-    "* The range of floating point number are usually adequte in practice\n",
+    "* The range of floating point number are usually adequate in practice\n",
     " * the whole universe only have $10^{80}$ protons ...\n",
     "* The machine precision is the more commonly encountered limitation\n",
     " * machine precision $\\epsilon_m$ is the maximum $\\epsilon$ that makes $1 + \\epsilon = 1$"
@@ -1373,7 +1373,7 @@
    "source": [
     "## Subtle errors\n",
     "\n",
-    "The limited precision can cause subtle errors that are puzzling even for experiened programmers."
+    "The limited precision can cause subtle errors that are puzzling even for experienced programmers."
    ]
   },
   {
@@ -1446,7 +1446,7 @@
     "\n",
     "Dramatic loss of precision can happen when very similar numbers are subtracted\n",
     "\n",
-    "* Value the follwing function around 0: \n",
+    "* Value the following function around 0: \n",
     "\n",
     "$$f(x) = \\frac{1}{x^2}(1-\\cos(x))$$\n",
     "\n",
@@ -1546,7 +1546,7 @@
     "* Dramatic precision loss when subtracting numbers that are very similar \n",
     " * Most leading significant digits cancel\n",
     " * The result has much fewer number of significant digits\n",
-    "* Catestrophic cancellation could easily happen in practice \n",
+    "* Catastrophic cancellation could easily happen in practice \n",
     " * Deltas are often computed by bump and re-value\n",
     " * Very small bump sizes should be avoided"
    ]
@@ -1775,7 +1775,7 @@
     " \n",
     " * $f(x_1, x_2) = x_1 - x_2$ \n",
     " \n",
-    "   $k(f) = \\frac{|x_1| + |x_2|}{|x_1 - x_2|}$, ill conditioned when $x_1 \\approx x_2$, catestrophic cancellation\n",
+    "   $k(f) = \\frac{|x_1| + |x_2|}{|x_1 - x_2|}$, ill conditioned when $x_1 \\approx x_2$, catastrophic cancellation\n",
     "   \n",
     " * $f(x_1, x_2) = x_1 x_2$ \n",
     " \n",
