--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -101,7 +101,7 @@
    "source": [
     "## Vector addition\n",
     "* Associativity: $\\bs{u + (v + w) = (u + v) + w}$\n",
-    "* Cumutativity: $\\bs{u + v = v + u}$\n",
+    "* Commutativity: $\\bs{u + v = v + u}$\n",
     "* Identity: $\\bs{v + 0 = v}$ for $\\forall \\bs{v}$\n",
     "* Inverse: for $\\forall \\bs{v}$, exists an $-\\bs{v}$, so that $\\bs{v + (-v) = 0}$ \n",
     "* Distributivity: $a \\bs{(u + v)} = a \\bs{u} + a \\bs v, (a+b) \\bs v = a \\bs v + b \\bs v$\n",
@@ -155,7 +155,7 @@
     "* $\\langle \\bs{u, v} \\rangle = \\langle \\bs{v, u} \\rangle^c$ \n",
     "* $\\langle \\bs{u, u} \\rangle \\ge 0$ \n",
     "* $\\langle \\bs{u, u} \\rangle = 0 \\iff u = 0$ \n",
-    "* $\\bs {u, v}$ othogonal if $\\langle \\bs{u, v} \\rangle = 0$ "
+    "* $\\bs {u, v}$ orthogonal if $\\langle \\bs{u, v} \\rangle = 0$ "
    ]
   },
   {
@@ -231,7 +231,7 @@
     "* $L(\\bs{u + v}) = L(\\bs u) + L(\\bs v)$ \n",
     "* $L(a \\bs v) = a L(\\bs v)$ \n",
     "\n",
-    "Any linear transformation bewteen finite dimensional vector space can be represented by a matrix multiplication, therefore we can write $L \\bs u$ instead of $L(\\bs u)$."
+    "Any linear transformation between finite dimensional vector space can be represented by a matrix multiplication, therefore we can write $L \\bs u$ instead of $L(\\bs u)$."
    ]
   },
   {
@@ -367,7 +367,7 @@
    "source": [
     "## Gaussian elimination\n",
     "\n",
-    "Eliminate the $x_1$ terms using the first row, this operation is a linear transformation:\n"
+    "Eliminate the $x_1$ terms using the first row, this operation is a linear transformation:"
    ]
   },
   {
@@ -455,7 +455,7 @@
     }
    },
    "source": [
-    "the $L_1$ and $L_2$ are both lower triangular matrix"
+    "the $L_1$ and $L_2$ are both lower triangular matrices"
    ]
   },
   {
@@ -496,7 +496,7 @@
     }
    },
    "source": [
-    "The resulting matrix $U = L_2L_1A$ is upper trianglar"
+    "The resulting matrix $U = L_2L_1A$ is upper triangular"
    ]
   },
   {
@@ -596,7 +596,7 @@
    "source": [
     "* The LU factorization is the matrix representation of Gaussian elimination\n",
     "* LU factorization can be used to compute matrix inversion\n",
-    "  * trianglular matrix can be inverted by simple substitution"
+    "  * triangular matrix can be inverted by simple substitution"
    ]
   },
   {
@@ -764,7 +764,7 @@
     "* Matrix $A$ is semi positive definite if $\\bs x^T A \\bs {x \\ge 0}$ for $\\forall \\bs{x \\ne 0}$\n",
     "* Positive definite does not imply every element in the matrix is positive\n",
     "\n",
-    "Both covariance and correlation matrices are symmetric (semi) positive definte (SPD):\n",
+    "Both covariance and correlation matrices are symmetric (semi) positive definite (SPD):\n",
     "\n",
     "* $\\bs x^T V \\bs x = \\text{cov}[\\bs x^T \\bs {\\tilde r},\\bs x^T \\bs {\\tilde r}] = \\text{var}[\\bs x^T \\bs {\\tilde r}] \\ge 0$\n",
     "* $\\bs x^T C \\bs x = \\text{cov}[\\bs x^T \\bs {\\tilde s},\\bs x^T \\bs {\\tilde s}] = \\text{var}[\\bs x^T \\bs {\\tilde s}] \\ge 0$"
@@ -994,7 +994,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Previoius covariance matrix:"
+    "Previous covariance matrix:"
    ]
   },
   {
@@ -1035,7 +1035,7 @@
    "source": [
     "## Recursive algorithm\n",
     "\n",
-    "A SPD matrix $A$ and its Choleski decomposition $L$ can be partitioned as:"
+    "A SPD matrix $A$ and its Cholesky decomposition $L$ can be partitioned as:"
    ]
   },
   {
@@ -1186,7 +1186,7 @@
     "Draw discretized version of $\\delta \\bs w = L \\bs z \\sqrt{\\delta t}$\n",
     "* where $\\bs z$ is a vector of independent standard normal random variables\n",
     "  * $\\mathbb{E}[\\bs z] = \\bs 0$, $\\mathbb{E}[\\bs z \\bs z^T] = I$ \n",
-    "* $L$ is the Cholesky decomposition of the correlaiton matrix $C = LL^T$\n",
+    "* $L$ is the Cholesky decomposition of the correlaton matrix $C = LL^T$\n",
     "\n",
     "$\\delta \\bs w$ have the desired correlation:\n",
     "$$\\mathbb{E}[\\delta \\bs w \\delta \\bs w^T] = \\mathbb{E}[L \\bs z \\bs z^T L^T] \\delta t = L \\mathbb{E}[\\bs z \\bs z^T] L^T \\delta t = LL^T \\delta t = C \\delta t$$\n",
@@ -1440,7 +1440,7 @@
     "\n",
     "$$\\renewcommand{p}{\\partial}\\bs y(\\bs x)  = [y_1(\\bs x), ..., y_n(\\bs x)]^T$$\n",
     "\n",
-    "* Deriative to vector (Jacobian matrix): $\\frac{\\partial \\bs y}{\\partial \\bs x} = \\left[\\frac{\\partial{y_1}}{\\partial \\bs x}, \\frac{\\partial{y_2}}{\\partial \\bs x}, \\cdots, \\frac{\\partial{y_n}}{\\partial \\bs x} \\right]^T$\n",
+    "* Derivative to vector (Jacobian matrix): $\\frac{\\partial \\bs y}{\\partial \\bs x} = \\left[\\frac{\\partial{y_1}}{\\partial \\bs x}, \\frac{\\partial{y_2}}{\\partial \\bs x}, \\cdots, \\frac{\\partial{y_n}}{\\partial \\bs x} \\right]^T$\n",
     " *  $\\frac{\\partial \\bs y}{\\partial \\bs x}$ is a matrix of $\\bs y$ rows and $\\bs x$ columns\n",
     " * $\\frac{\\partial \\bs y}{\\partial \\bs x}\\frac{\\partial \\bs x}{\\partial \\bs y} = \\id$, even when $\\bs x$ and $\\bs y$ are of different dimension.\n",
     " * sometime we use the following notation:  $\\frac{\\partial \\bs y}{\\partial \\bs x^T} =  \\left(\\frac{\\partial \\bs y}{\\partial \\bs x}\\right)^T$\n",
@@ -1471,7 +1471,7 @@
     "| $\\frac{\\p \\bs{u}^T A \\bs v}{\\p \\bs x} $ |  $\\bs u^T A \\frac{\\p{\\bs v}}{\\p \\bs x}  +  \\bs v^T A^T \\frac{\\p{\\bs u}}{\\p \\bs x} $ |$\\frac{\\p \\bs{x}^T A \\bs x}{\\p \\bs x} = \\bs x^T (A + A^T) $, $\\frac{\\p \\bs{u^Tv}}{\\p \\bs x} =\\bs{u}^T\\frac{\\p \\bs{v}}{\\p \\bs x} + \\bs{v}^T\\frac{\\p \\bs{u}}{\\p \\bs x}$ |\n",
     "| $\\frac{\\p{\\bs g(\\bs u})}{\\p \\bs x}$ |  $\\frac{\\p{\\bs g}}{\\p \\bs u} \\frac{\\p{\\bs u}}{\\p \\bs x} $ | $\\frac{\\p \\bs y}{\\p \\bs x}\\frac{\\p \\bs x}{\\p \\bs y} = \\id$ , $\\frac{\\p \\bs z}{\\p \\bs y}\\frac{\\p \\bs y}{\\p \\bs x}  \\frac{\\p \\bs x} {\\p \\bs z}= \\id$, multi-step chain rules. |\n",
     "\n",
-    "* Similar to  univariate calculus, a compact notation for mutlivariate calculus\n",
+    "* Similar to  univariate calculus, a compact notation for multivariate calculus\n",
     "* Replace $A^T$ by $A^*$ for complex matrix"
    ]
   },
@@ -1506,7 +1506,7 @@
     "* $\\bs f = \\mathbb{E}[\\tilde{\\bs r}] - r_0$ is a vector of excess return forecast of all **risky** assets\n",
     "  * $r_0$ is the risk free rate\n",
     "* $\\bs f$ is a view, which can be from:\n",
-    "  * Fundamental research: earning forcasts, revenue growth etc\n",
+    "  * Fundamental research: earning forecasts, revenue growth etc\n",
     "  * Technical and quantitative analysis\n",
     "  * Your secret trading signal"
    ]
@@ -1872,7 +1872,7 @@
    "source": [
     "## Implied view of a portfolio\n",
     "\n",
-    "From any portfolio, we can backout its implied excess return forecast $\\bs f$:\n",
+    "From any portfolio, we can back out its implied excess return forecast $\\bs f$:\n",
     "* Assuming the portfolio is mean variance optimal\n",
     "* It is nothing but the betas to the portfolio\n",
     "* Only meaningful in a relative sense as well\n",
@@ -2273,7 +2273,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "the optimal portfolio is totally different, how is it posible?"
+    "the optimal portfolio is totally different, how is it possible?"
    ]
   },
   {
@@ -2364,7 +2364,7 @@
     }
    },
    "source": [
-    "A small perturbtion on matrix $A$:"
+    "A small perturbation on matrix $A$:"
    ]
   },
   {
@@ -2491,7 +2491,7 @@
    "source": [
     "## Matrix condition\n",
     "\n",
-    "The propogation of errors in a linear system $\\bs y = A\\bs x$ with invertable $A$:\n",
+    "The propagation of errors in a linear system $\\bs y = A\\bs x$ with invertible $A$:\n",
     "* Consider a perturbation to $\\bs{ x' = x} + d\\bs x$, and corresponding $d \\bs y = A d\\bs x$:\n",
     "\n",
     "$$\\begin{array}\\\\\n",
