--- a/Lecture5.ipynb
+++ b/Lecture5.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "* Derivatives, Deltas and Hedging \n",
     "* Risk transformation\n",
-    "* Hedge Optmization\n",
+    "* Hedge Optimization\n",
     "* Brownian Bridge\n",
     "* Numerical integration"
    ]
@@ -136,7 +136,7 @@
     "* Delta: 1st order derivative to market environments: $\\bs \\delta = \\frac{\\partial v}{\\partial \\bs m}$\n",
     " * Delta is a vector of size $m$\n",
     " * Deltas are in the unit of currency\n",
-    "* Gamma: 2nd order derivaties to market environments: $\\Gamma = \\frac{\\partial \\bs \\delta}{\\partial \\bs m}$\n",
+    "* Gamma: 2nd order derivatives to market environments: $\\Gamma = \\frac{\\partial \\bs \\delta}{\\partial \\bs m}$\n",
     " * Gamma is a $m \\times m$ matrix that includes all cross gammas\n",
     "* Theta: $\\theta = \\frac{\\partial v}{\\partial t}$\n",
     "* Delta is also defined for certain common model parameters:\n",
@@ -176,7 +176,7 @@
     "\n",
     "* Compute Deltas to all relevant market risk factors\n",
     "* Aggregate the risk sensitivities to the portfolio level\n",
-    "* Put on hedges that netralize the portfolio's sensitivities to unwanted risk factors\n",
+    "* Put on hedges that neutralize the portfolio's sensitivities to unwanted risk factors\n",
     "* The hedges are rebalanced frequently\n",
     "* Dynamic hedging allows a market maker to trade and risk manage illiquid derivatives\n",
     "* Risk managers impose limits on deltas to key risk factors"
@@ -386,7 +386,7 @@
     "* $\\frac{\\partial v}{\\partial \\bs q}$ are the Deltas of the bespoke instrument\n",
     "* $\\frac{\\partial \\bs b}{\\partial \\bs q}$ are the Deltas of the benchmark instruments.\n",
     "\n",
-    "$-\\bs h^T \\bs b$ is the portfolio to netrualize all the first order risks, commonly referred as the hedging portfolio.\n",
+    "$-\\bs h^T \\bs b$ is the portfolio to neutralize all the first order risks, commonly referred as the hedging portfolio.\n",
     "\n",
     "* this equation is the core of a market maker's operation\n",
     "* we can trade illiquid instrument and hedge them using liquid benchmarks\n",
@@ -643,7 +643,7 @@
     "      * build tension spline interpolation on the whole hazard rate term structure $\\bs h$\n",
     "      * price the benchmark CDS instrument $b_j$, \n",
     "      * continue root search until $b_j$ matches the market price to a high precision\n",
-    "  1. price the besoke instrument $v$ using the bumped curve, and iterate if pricing error is large\n",
+    "  1. price the bespoke instrument $v$ using the bumped curve, and iterate if pricing error is large\n",
     "1. compute the delta using finite difference"
    ]
   },
@@ -825,7 +825,7 @@
    "source": [
     "## CDS big bang\n",
     "\n",
-    "The big bang of CDS standardisation occured in 2010:\n",
+    "The big bang of CDS standardisation occurred in 2010:\n",
     "\n",
     "|  Era   | Liquid Instruments | Quoting Convention | At Trade Inception | Counterparty |\n",
     "| :---: | :----: | :----: | :-----: |\n",
@@ -1673,9 +1673,9 @@
     "$$ \\frac{\\partial v}{\\partial{\\bs q}}  = \\frac{\\partial v}{\\partial \\bs g} \\left(\\frac{\\partial \\bs b}{\\partial \\bs g}\\right)^{-1}\\frac{\\partial \\bs b}{\\partial \\bs q} $$\n",
     "\n",
     "* the right hand side is much easier to compute than $\\frac{\\partial v}{\\partial \\bs q}$\n",
-    "* RHS no longer requires re-bootstraping the curves\n",
+    "* RHS no longer requires re-bootstrapping the curves\n",
     "\n",
-    "The same Detlas are computed at a much lower cost that the brute-force bump and recalc."
+    "The same Deltas are computed at a much lower cost that the brute-force bump and recalc."
    ]
   },
   {
@@ -1849,10 +1849,10 @@
     "Partial hedge is to take the subset of the full hedging portfolio, keeping notionals unchanged.\n",
     "\n",
     "* simple, but it is a starting point\n",
-    "* we can use it as a baseline to evaluate other hedging stategies\n",
+    "* we can use it as a baseline to evaluate other hedging strategies\n",
     "\n",
     "\n",
-    "Can we apply PCA analysis?"
+    "Can we apply PCA?"
    ]
   },
   {
@@ -2276,15 +2276,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
    "outputs": [
@@ -2476,8 +2467,8 @@
     "\n",
     "In practice, there is almost never a need to go beyond the Simpson's rule.\n",
     "\n",
-    "* We sometime run into (nearly) discountinuous $f(x)$, where the simple Trapezoidal rule works very well.\n",
-    "* Adaptive method can be used to achieve a desired level of acccuracy"
+    "* We sometime run into (nearly) discontinuous $f(x)$, where the simple Trapezoidal rule works very well.\n",
+    "* Adaptive method can be used to achieve a desired level of accuracy"
    ]
   },
   {
