Fix Lecture 3 Typos

--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -119,7 +119,7 @@
    "source": [
     "## Condition number of non-square matrix\n",
     "\n",
-    "We already proved that an invertable matrix $A$'s condition number is \n",
+    "We already proved that an invertible matrix $A$'s condition number is \n",
     "\n",
     "$$k(A) = \\Vert A \\Vert \\Vert A^{-1} \\Vert$$\n",
     "\n",
@@ -149,7 +149,7 @@
     "\\end{eqnarray}$$\n",
     "\n",
     "* $W$ is a diagonal weighting matrix for the elements in $\\bs \\beta$, e.g. $W = I$ is often a good start\n",
-    "* $\\lambda$ is a scaler penalty rate"
+    "* $\\lambda$ is a scalar penalty rate"
    ]
   },
   {
@@ -166,7 +166,7 @@
     "\n",
     "$$  y = 2x + 0.1z + 5 + \\epsilon $$\n",
     "\n",
-    "* $x, z$ are standard normal, $z$ represent an insignificant feature (or accidental correlation)\n",
+    "* $x, z$ are standard normal, $z$ represents an insignificant feature (or accidental correlation)\n",
     "* $\\epsilon$ is a standard normal noise\n",
     "\n",
     "We regress the vector $\\bs y$ against $X = [\\bs x, \\bs x + .0001 \\bs z, \\bs 1]$:"
@@ -412,7 +412,7 @@
     "\n",
     "$$ A R = R \\Lambda$$\n",
     "\n",
-    "* where each column of $R$ is a eigenvector, and $\\Lambda$ is a diagnoal matrix of eigenvalues\n",
+    "* where each column of $R$ is a eigenvector, and $\\Lambda$ is a diagonal matrix of eigenvalues\n",
     "\n",
     "\n",
     "$R$ is invertible because eigen vectors are all independent:\n",
@@ -619,7 +619,7 @@
     "* the eigven values are the diagonal elements of $A_k$\n",
     "* guaranteed to converge if $A$ is real and symmetric\n",
     "\n",
-    "This algorithm is unconditionally stable because only orthogonal transformtions are used.\n",
+    "This algorithm is unconditionally stable because only orthogonal transformations are used.\n",
     "\n",
     "* $A$ is often transformed using a similarity transformation to a near upper triangle before applying the QR algorithm. "
    ]
@@ -978,7 +978,7 @@
     "\n",
     "$$ \\min_{\\bs {\\beta}} \\Vert X \\bs{\\beta - y} \\Vert_2 = \\min_{\\bs {\\beta}} \\Vert Q^T X \\bs \\beta - Q^T \\bs y \\Vert_2 = \\min_{\\bs {\\beta}} \\Vert R \\bs \\beta - \\bs y'\\Vert_2$$\n",
     "\n",
-    "note that $R$ is right trangular, the vector whose norm is to be minimized looks like:\n",
+    "note that $R$ is right triangular, the vector whose norm is to be minimized looks like:\n",
     "\n",
     "$$\\scriptsize \\begin{pmatrix}\n",
     "r_{11} & r_{12} & \\cdots & r_{1n} \\\\\n",
@@ -1020,7 +1020,7 @@
     "6. 1959-1961, QR decomposition/QR algorithm\n",
     "7. 1963, quicksort\n",
     "8. 1965, fast fourier transform\n",
-    "9. 1977, integer relation detection algoirthm\n",
+    "9. 1977, integer relation detection algorithm\n",
     "10. 1987, fast multipole algorithm"
    ]
   },
@@ -1080,7 +1080,7 @@
     "* Suppose $\\tilde {\\bs r}$ is a random vector, with expectation $\\bar{\\bs r} = \\mathbb{E}[\\tilde{\\bs r}]$ and covariance matrix $ V = \\mathbb{E}[(\\bt r - \\bar{\\bs r})(\\bt r - \\bar{\\bs r})^T] $\n",
     "  * e.g.: returns of a set of equity names\n",
     "\n",
-    "* PC is defined to be the direction $\\hat{\\bs u}$ onto which the projection $\\tilde {\\bs r}^T \\hat{\\bs u}$ has the maximimum variance, \n",
+    "* PC is defined to be the direction $\\hat{\\bs u}$ onto which the projection $\\tilde {\\bs r}^T \\hat{\\bs u}$ has the maximum variance, \n",
     "  * $\\hat{\\bs u}$ is a unit vector, i.e., $\\Vert \\hat{\\bs u} \\Vert_2 = \\sqrt{\\hat{\\bs u}^T\\hat{\\bs u}} = 1$"
    ]
   },
@@ -1518,7 +1518,7 @@
     "$$\n",
     "\n",
     "* $\\bt z$ is independent standard normal random vector.\n",
-    "* we can reduce $\\bt z$ dimension by finding a rectanglar $\\dot L$ so that $V \\approx \\dot L {\\dot L}^T$"
+    "* we can reduce $\\bt z$ dimension by finding a rectangular $\\dot L$ so that $V \\approx \\dot L {\\dot L}^T$"
    ]
   },
   {
@@ -1599,7 +1599,7 @@
     }
    },
    "source": [
-    "However, neiher is true because: \n",
+    "However, neither is true because: \n",
     "* $\\Sigma R_C$ is not orthogonal: $(\\Sigma R_C)(\\Sigma R_C)^T = \\Sigma R_C R_C^T \\Sigma = \\Sigma\\Sigma \\ne I$\n",
     "  * $V = \\Sigma C \\Sigma$, $V$ and $C$ are not similar\n",
     "* $\\Sigma R_C \\ne R_C \\Sigma$, even when $\\Sigma$ is diagonal.\n",
@@ -1686,7 +1686,7 @@
     " \n",
     "PCA is usually applied to different data points of the same type\n",
     "\n",
-    "* different tenors/strikes of interest rates, volatiilty etc.\n",
+    "* different tenors/strikes of interest rates, volatility etc.\n",
     "* price movements of the same sector/asset class"
    ]
   },
@@ -1781,7 +1781,7 @@
     "| Symmetry in Dimension | Yes | No |\n",
     "\n",
     "To choose between the two:\n",
-    "* Use least square/regression when there are clear explanatary variables and causality\n",
+    "* Use least square/regression when there are clear explanatory variables and causality\n",
     "* Use PCA when there is a set of related variables but no clear causality\n",
     "* PCA requires a natural unit for all dimensions"
    ]
@@ -2090,7 +2090,7 @@
     }
    },
    "source": [
-    "## Singular value decmposition\n",
+    "## Singular value decomposition\n",
     "\n",
     "We can write all singular vectors and singular values in matrix format, which is the singular value decomposition (SVD):\n",
     "\n",
@@ -2319,7 +2319,7 @@
     " \n",
     "| Decomposition | Applicability | Formula | Results | Key applications |\n",
     "| :---: | :---: | :---: | :---: | \n",
-    "| LU | square, full rank | $A = LU$ | lower, upper triangluar | matrix inversion |\n",
+    "| LU | square, full rank | $A = LU$ | lower, upper triangular | matrix inversion |\n",
     "| Cholesky | symmetric positive definite | $A = LL^T$ | lower triangular | simulate correlated factors |\n",
     "| QR | any | $A = Q R$ | orthogonal, upper triangular | solve eigen values, least square|\n",
     "| EVD | symmetric | $A = R\\Lambda R^T$ | orthogonal, real diagonal | PCA |\n",
@@ -2336,7 +2336,7 @@
    "source": [
     "# Assignment\n",
     "\n",
-    "Requried reading:\n",
+    "Required reading:\n",
     "\n",
     "* Bindel and Goodman: Chapter 4\n",
     "\n",
