fix typo in lec4 slide

--- a/Lecture4.ipynb
+++ b/Lecture4.ipynb
@@ -1770,7 +1770,7 @@
     "It is important to choose the right quantity to interpolate\n",
     "\n",
     "* There are many potential choices, e..g: $f(t), f'(t)$ or $\\int_0^t f(s) ds$ etc.\n",
-    "* Which viariable is a natural fit for tension spline's stretch operation?\n",
+    "* Which variable is a natural fit for tension spline's stretch operation?\n",
     "* We want the vairable itself to be continous, but can live with the discontinuities in $f'(t)$ when $\\lambda \\rightarrow \\infty$\n",
     "\n",
     "Industry standard:\n",
