explain total variance of random vector

--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -1154,7 +1154,7 @@
    "source": [
     "## Variance explained\n",
     "\n",
-    "The total variance of is sum of variance of in all $n$ elements of the random vector, which equals:\n",
+    "The total variance of the random vector $\\tilde {\\bs r}$ is sum of variance of all its $n$ elements, which equals:\n",
     "\n",
     "1. trace of $V$\n",
     "2. sum of all eigen values of $V$\n",
