--- a/Lecture4.ipynb
+++ b/Lecture4.ipynb
@@ -167,8 +167,8 @@
    "source": [
     "## Bisection\n",
     "\n",
-    "* initial gueses must bucket the solution\n",
-    "* the function must be continous\n",
+    "* initial guess must bucket the solution\n",
+    "* the function must be continuous\n",
     "* converges to the true root linearly (absolute error halves for each iteration).\n",
     "  * $\\vert \\epsilon_{n+1} \\vert \\le c \\vert \\epsilon_{n} \\vert $, $c = \\frac{1}{2}$ for Bisection\n",
     "  * the term linear is rather confusing, as the error actually reduces exponentially."
@@ -802,10 +802,10 @@
     "\n",
     "A tension spline is originally defined as: $f^{(4)}(x) - \\lambda f''(x) = 0$\n",
     "\n",
-    "* it models a physical spline stretchd by a tension force \n",
+    "* it models a physical spline stretched by a tension force \n",
     "* $\\lambda$ is the ratio of the tension force over the rigidity of the spline\n",
     "* it reduces to cubic spline when $\\lambda = 0$\n",
-    "* with $\\lambda \\rightarrow \\infty$, the spline is streched to piece-wise straight lines\n",
+    "* with $\\lambda \\rightarrow \\infty$, the spline is stretched to piece-wise straight lines\n",
     "* the solution is a combination of exponential and linear functions of $x$"
    ]
   },
@@ -998,7 +998,7 @@
     }
    },
    "source": [
-    "The linear system can be explicity inverted (by sympy!):"
+    "The linear system can be explicitly inverted (by `sympy`!):"
    ]
   },
   {
@@ -1043,7 +1043,7 @@
    "source": [
     "## Continuity conditions\n",
     "\n",
-    "Thus $\\ddot{f}(x_i)$ at the knots are the only $n$ unknowns, which are sovable from the following $n$ constraints:\n",
+    "Thus $\\ddot{f}(x_i)$ at the knots are the only $n$ unknowns, which are solvable from the following $n$ constraints:\n",
     "* End condition (natural spline): $\\ddot{f}(x_1) = \\ddot{f}(x_{n}) = 0$\n",
     "* Continuity in $\\dot{f}(x_i)$ for $n-2$ intermediate knots\n",
     "\n",
@@ -1065,7 +1065,7 @@
     }
    },
    "source": [
-    "## Couninuity in $f'(x_i)$"
+    "## Continuity in $f'(x_i)$"
    ]
   },
   {
@@ -1181,7 +1181,7 @@
     }
    },
    "source": [
-    "what is the complexity of regular LU decomposition?"
+    "What is the complexity of regular LU decomposition?"
    ]
   },
   {
@@ -1251,7 +1251,7 @@
     "\n",
     "Spline interpolation is global:\n",
     "* changing a single knot affects the whole curve\n",
-    "* the perbation is more localized with greater tension parameter $\\lambda$"
+    "* the perturbation is more localized with greater tension parameter $\\lambda$"
    ]
   },
   {
@@ -1312,9 +1312,9 @@
    "source": [
     "## Integral of tension spline\n",
     "\n",
-    "* Though complicated, the integral is analytical nontheless\n",
+    "* Though complicated, the integral is analytical nonetheless\n",
     "* The integral can be useful in deriving analytical pricing formulae\n",
-    "  * derived using sympy"
+    "  * derived using `sympy`"
    ]
   },
   {
@@ -1442,7 +1442,7 @@
     }
    },
    "source": [
-    "## Curve building foundamentals\n",
+    "## Curve building fundamentals\n",
     "\n",
     "* Inputs: prices of benchmark instruments of the same risk factor, at different maturities\n",
     "* Outputs: a single curve for the underlying factor that explains all observed prices to adequate precision.\n",
@@ -1487,7 +1487,7 @@
     "\n",
     "$$f(t) = -\\frac{1}{b(t)}\\frac{d b(t)}{d t} \\iff b(t) = e^{-\\int_{0}^t f(s) ds} $$\n",
     "\n",
-    "* Swap rate (continous coupon): \n",
+    "* Swap rate (continuous coupon): \n",
     "\n",
     "$$s(t) = \\frac{1 - b(t)}{\\int_0^t b(s) ds} \\iff s(t) \\int_0^t b(s) ds + b(t) = 1 $$ \n",
     "\n",
@@ -1596,7 +1596,7 @@
     "* receiver swap is long $\\iff$ own a fixed coupon risk free bond \n",
     "* sell CDS protection is long $\\iff$ own a fixed coupon risky bond \n",
     "\n",
-    "Deltas are **always** comunicated by perturbing the market to the longer side, ie, the direction where long positions makes money:\n",
+    "Deltas are **always** communicated by perturbing the market to the longer side, i.e., the direction where long positions makes money:\n",
     "\n",
     "* interest rate decrease by 1bps\n",
     "* credit spread compress by 1bps\n",
@@ -1636,7 +1636,7 @@
    "source": [
     "## CDS benchmark instruments\n",
     "\n",
-    "The folllowing is a representatitve set of CDS quotes observed in the market:"
+    "The following is a representative set of CDS quotes observed in the market:"
    ]
   },
   {
@@ -1751,7 +1751,7 @@
     }
    },
    "source": [
-    "* the CDS contract have standardised semi-annual maturites, on Mar-20 and Sep-20\n",
+    "* the CDS contract have standardised semi-annual maturities, on Mar-20 and Sep-20\n",
     "* it usually costs more per annum for longer term contracts\n",
     "* for most names, there are only a few liquid CDS instruments, referred as the benchmark instruments\n",
     "* quoted spreads is a way to communicate the upfront payment, it loosely corresponds to the zero rate or yield in IR"
@@ -1771,7 +1771,7 @@
     "\n",
     "* There are many potential choices, e..g: $f(t), f'(t)$ or $\\int_0^t f(s) ds$ etc.\n",
     "* Which variable is a natural fit for tension spline's stretch operation?\n",
-    "* We want the vairable itself to be continous, but can live with the discontinuities in $f'(t)$ when $\\lambda \\rightarrow \\infty$\n",
+    "* We want the variable itself to be continuous, but can live with the discontinuities in $f'(t)$ when $\\lambda \\rightarrow \\infty$\n",
     "\n",
     "Industry standard:\n",
     "$$p(t) = e^{-\\int_0^t h(s) ds}$$\n",
@@ -2015,7 +2015,7 @@
     "\n",
     "* $g(t)$ is continuous and monotonic, 1 to 1 with $p(t)$\n",
     "* $g(0) = 0$, the boundary condition is well defined\n",
-    "* $h(t) = g'(t)$ can be discountinous when $\\lambda \\rightarrow \\infty$, this reverts to the standard method of piecewise flat hazard rate\n",
+    "* $h(t) = g'(t)$ can be discontinuous when $\\lambda \\rightarrow \\infty$, this reverts to the standard method of piecewise flat hazard rate\n",
     "* with finite $\\lambda$, hazard rate is smooth and continuous\n",
     "\n",
     "This argument carries over to the interest rate curve building:\n",
@@ -2547,15 +2547,6 @@
     "\n",
     "* Complete [homework set 4](http://yadongli.github.io/nyumath2048/)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
