HW4 First Problem

--- a/Homework4.ipynb
+++ b/Homework4.ipynb
@@ -9,14 +9,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Populating the interactive namespace from numpy and matplotlib\n"
+     ]
+    },
+    {
+     "ename": "ImportError",
+     "evalue": "bad magic number in 'inst': b'3\\r\\r\\n'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-1a0f37bbead5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_line_magic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'pylab'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'inline'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0minst\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfmt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m: bad magic number in 'inst': b'3\\r\\r\\n'"
      ]
     }
    ],
@@ -35,6 +48,59 @@
     "Implement the Thomas algorithm for solving tridiagonal linear systems:\n",
     "\n",
     "Do your own reading and research on <a href=http://en.wikipedia.org/wiki/Tridiagonal_matrix_algorithm>Thomas algorithm</a> and implement and test it in Python."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solve_tridiagonal_matrix(matrix, d):\n",
+    "    _, n = matrix.shape\n",
+    "    a, b, c, x = (np.empty(n) for _ in range(4))\n",
+    "    c_p, d_p = [None for _ in range(n)], [None for _ in range(n)]\n",
+    "    for i in range(n):\n",
+    "        if i > 0:\n",
+    "            a[i] = matrix[i, i-1]\n",
+    "        if i < n - 1:\n",
+    "            c[i] = matrix[i, i+1]\n",
+    "        b[i] = matrix[i, i]\n",
+    "    for i in range(n-1):\n",
+    "        if i > 0:\n",
+    "            c_p[i] = c[i] / (b[i] - a[i] * c_p[i-1])\n",
+    "        else:\n",
+    "            c_p[i] = c[i] / b[i]\n",
+    "    for i in range(n):\n",
+    "        if i > 0:\n",
+    "            d_p[i] = (d[i] - a[i]*d_p[i-1]) / (b[i] - a[i] * c_p[i-1])\n",
+    "        else:\n",
+    "            d_p[i] = d[i] / b[i]\n",
+    "    x[n-1] = d_p[n-1]\n",
+    "    for i in range(n-2, -1, -1):\n",
+    "        x[i] = d_p[i] - c_p[i]*x[i+1]\n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _test_solve_tridiagonal_matrix(matrix, d):\n",
+    "    solution = solve_tridiagonal_matrix(matrix, d)\n",
+    "    assert np.allclose(matrix.dot(solution), d) is True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matrix = np.matrix([[1, 2, 0], [3, 4, 5], [0, 6, 7]])\n",
+    "test_solve_tridiagonal_matrix(matrix, np.array([8, 9, 10]))"
    ]
   },
   {
@@ -196,7 +262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
